# subtitleterms

./: .gitignore  README.md  hatch_build.py  pyproject.toml  vendors.py
po/: POTFILES.in  en.po  subtitleterms.pot
src/subtitleterms/: __init__.py  actions.py  builders.py  cli.py  deck.py  ext.py  i18n.py  subimport.py
src/subtitleterms/deckbuilder/: base.py  entrystore.py  zh_builder.py
src/subtitleterms/deckbuilder/css/: all_lang.css
src/subtitleterms/i18n/: __init__.py  localizations.py
src/subtitleterms/locales/: subtitleterms.pot
src/subtitleterms/locales/en/LC_MESSAGES/: subtitleterms.po
src/subtitleterms/ui/: __init__.py  importdialog.py  importdialog.ui  videoextensions.py  videoextensions.sh
tests/: test_zh_builder.py
