[project]
name = "subtitleterms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Derek Enlow", email = "derekenlow@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "aqt>=25.9.2",
  "genanki>=0.13.1",
  "htpy>=25.12.0",
  "jieba>=0.42.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = ["hatchling>=1.28.0", "pytest>=9.0.2"]

[build-system]
requires = ["hatchling", "hatch-zipped-directory"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.build.targets.zipped-directory]
install-name = ""
artifacts = ["src/*/vendor/*"]
[tool.hatch.build.targets.zipped-directory.sources]
"src/subtitleterms" = ""
[tool.hatch.build.targets.zipped-directory.hooks.custom]
path = "vendors.py"

[tool.vendors]
ignore = ["aqt", "requests"]
