[project]
name = "subtitleterms"
version = "0.2.0"
description = "Anki plug-in to extract and convert subtitles into usable notes for language-learning."
readme = "README.md"
authors = [{ name = "Derek Enlow", email = "derekenlow@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
  "aqt>=25.9.2",
  "htpy>=25.12.0",
  "jieba>=0.42.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = ["hatchling>=1.28.0", "pytest>=9.0.2"]

[build-system]
requires = ["hatchling", "hatch-gettext"]
build-backend = "hatchling.build"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.build.targets.sdist]
install-name = ""
artifacts = ["src/*/vendor/*", "*.mo"]
[tool.hatch.build.targets.sdist.sources]
"src/subtitleterms" = ""
[tool.hatch.build.targets.sdist.hooks.gettext]
locale-directory = "src/subtitleterms/locales"
regenerate-template = true
identify-left-out = true
show-report = true
[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"
vendor-directory = "src/subtitleterms/vendor"
ignore-dependencies = ["aqt", "requests"]
